# cpp-example-opencv-eigen

./: .clang-format  .gitignore  .typos.toml  CMakeLists.txt  LICENSE  README.md  cspell.json  pixi.toml
.github/workflows/: ci.yml  cpp.yml  spelling_and_links.yml
pixi/: env.bat  env.sh
src/: batch_adapters.hpp  collection_adapters.hpp  main.cpp
